server/envoy_grpc_web_with_tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: grpc-web-filter
  namespace: istio-system  # Change to the namespace where your Istio ingress is running
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway  # Ensure this matches your Istio Ingress Gateway labels
  configPatches:
    # Enable gRPC-Web filter
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:  
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.grpc_web
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: INSERT_BEFORE
        value:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2"]
                tls_certificate_sds_secret_configs:
                  - name: grpc-web-tls-secret
                    sds_config:
                      ads: {}
                      resource_api_version: V3
